pick 610990fb5 Replace MoreTypes#equivalence usages with TypeName for comparing objects.
see: https://github.com/google/dagger/commit/610990fb587d022356cb3596873984ec79626911
date: Dec 27, 2021